cmake_minimum_required(VERSION 3.22)
PROJECT(inscribe-task)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

# Open SSL
FIND_PACKAGE(OpenSSL REQUIRED)
IF(OpenSSL_FOUND)
    INCLUDE_DIRECTORIES(${OpenSSL_INCLUDE_DIRS})
    MESSAGE(STATUS "Using OpenSSL ${OpenSSL_VERSION}")
ENDIF()

# Boost
SET(Boost_USE_STATIC_LIBS OFF)
SET(Boost_USE_MULTITHREAD ON)
FIND_PACKAGE(Boost REQUIRED COMPONENTS coroutine system thread)
IF(Boost_FOUND)
  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
  LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
ENDIF(Boost_FOUND)

INCLUDE_DIRECTORIES(include)

SET(THREADS_PREFER_PTHREAD_FLAG ON)
FIND_PACKAGE(Threads REQUIRED)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

SET(USED_LIBS PRIVATE Threads::Threads 
  ${Boost_COROUTINE_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_THREAD_LIBRARY} ${OPENSSL_LIBRARIES})

SET(SOURCES 
  src/https_server.cpp
  src/uri_parser.cpp)

ADD_EXECUTABLE(run_app src/main.cpp ${SOURCES})
TARGET_LINK_LIBRARIES(run_app ${USED_LIBS})

ADD_EXECUTABLE(run_tests tests/test.cpp ${SOURCES})
TARGET_LINK_LIBRARIES(run_tests ${USED_LIBS})

ENABLE_TESTING()
ADD_TEST(Tests bin/run_tests)